Made some changes to paragraph & list line-height and nested list sizing to make it easier for Jasper to fit all content on the slides.

--- a/styles/_defaults.scss
+++ b/styles/_defaults.scss
@@ -71,3 +71,15 @@ $yellow: #FFD200;
 	height:1px;
 	border:none;
 	}
+
+// Line-height edits for Jasper
+
+@mixin wrap-line-height (
+	$total-line-height: 2*$minorGridY,
+	$wrap-line-height: 50px
+) {
+	$line-height-diff: $total-line-height - $wrap-line-height;
+	line-height: $wrap-line-height;
+	padding-top: $line-height-diff / 2;
+	padding-bottom: $line-height-diff / 2;
+	}
